[package]
name = "openapiv3-expand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = "1.0.2"
openapiv3-visit = "0.3.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
serde_json = "1.0.95"
